Added links to index.HTML

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/macd26" target="_blank">M Doherty</a> and is
+          <a href="https://github.com/macd26/week6HW" target="_blank"> on GitHub</a> and
+          <a href="https://thunderous-kelpie-ea4363.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
